# nntrainer

./: meson.build  meson_options.txt
Applications/: meson.build
Applications/Bert/: main.cpp  meson.build  multilingual-e5-large-instruct-sentence-transformer.py  multilingual-e5-large-instruct.py
Applications/CausalLM/layers/: mha_core.cpp
Applications/CausalLM/models/: causal_lm.cpp  embedding.cpp  embedding.h  transformer.cpp  transformer.h
Applications/CausalLM/res/gemma3/: weight_converter.py
Applications/CausalLM/res/qwen3-4b/: nntr_config.json  weight_converter.py
Applications/Seq2SeqLM/flan-t5-small/: weight_converter.py
Applications/XLMRoberta/: main.cpp  meson.build  multilingual-e5-large-instruct-sentence-transformer.py  multilingual-e5-large-instruct.py  position.cpp  position.h  token_type.cpp  token_type.h  util.cpp  util.h  xlm_roberta.cpp  xlm_roberta.h
nntrainer/models/: neuralnet.cpp
nntrainer/utils/: util_func.cpp
